--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ header{
     justify-content: space-between;
 }
 
-.time{
+.card{
     display: flexbox;
     flex-direction: column;
     justify-content: center;
@@ -83,12 +83,12 @@ header{
     text-align: center;
 }
 
-.time h3{
+.card h3{
     color: var(--light-grey);
     font-weight: 400;
 }
 
-.time span{
+.card span{
     color: var(--black);
     font-size: 72px;
 }
@@ -116,6 +116,109 @@ footer > img{
     margin-bottom: -5px;
 }
 
+/*=== MODAL ===*/
+
+.modal-overlay{
+    background: rgba(0,0,0,0.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+   
+}
+
+.modal{
+    background-color: white;
+    width: 40%;
+    height: 40%;
+    margin: 20vh auto;
+    position: relative;
+    border-radius: 10px;
+}
+
+ .modal-content{
+    display: flex;
+    justify-content:space-between ;
+    align-items: center;
+    padding: 30px;
+    column-gap: 40px;
+
+ }
+
+ .modal-content img{
+    width: 300px;
+    height: 300px;
+ }
+fom{
+    width: 80%;
+    height: 250px;
+    display: flex;
+    flex-direction: row;
+ }
+
+ form h2{
+    font-size: 24px;
+    text-align: center;
+    color: var(--text-color);
+ }
+
+ form input{
+    width: 100%;
+    border: 2px solid #d6d5d9b8;
+    padding: 10px;
+    margin-top: 8px;
+    border-radius: 4px;
+ }
+
+ form input[type="submit"]{
+    background: var(--purple);
+    border: none;
+    color: #FFF;
+    font-size: 1rem;
+ }
+
+ 
+
+ form input[type="submit"]:hover{
+    cursor: pointer;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+ }
+
+ 
+
+ input[type="text"]:focus{
+   outline: none;
+   border-color: #6C63FF;
+}
+
+input[type="email"]:focus{
+    outline: none;
+    border-color: #6C63FF;
+ }
+
+.modal .close-modal{
+    color: #282a36;
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.modal .close-modal:hover{
+    background: rgba(0,0,0,0.3);
+    border-radius:5px;
+}
+
+/*=== MODAL ===*/
+
+.modal-overlay.active{
+    opacity: 1;
+    visibility: visible;
+}
+
 /*  */
 
 /* max-width  */
@@ -132,11 +235,19 @@ footer > img{
         margin-top: 10px;
         margin-bottom: 100px;
     }
+
+    .modal-content{
+        flex-direction: column;
+    }
+
+    .modal-content img{
+        visibility: hidden;
+    }
 }
 
 
 /* min-width & max-width */
-@media screen and (min-width: 600px) and (max-width: 900px) {
+@media screen and (min-width: 600px) and (max-width: 1200px) {
 	.content{
         flex-direction: column-reverse;
     }
@@ -148,6 +259,14 @@ footer > img{
     .clock{
         margin-top: 10px;
         margin-bottom: 100px;
+    }
+
+    .modal-content{
+        flex-direction: column;
+    }
+
+    .modal-content img{
+        visibility: hidden;
     }
 }
 
