--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,9 @@
 :root {
     --black: #4D4C59;
     --purple: #6C63FF;
-      --light-grey: #C8C8C8;
+    --light-grey: #C8C8C8;
     --text-color: #9C9AB6;
+    --danger: #DF4D31;
   }
 
 body{
@@ -43,7 +44,7 @@ header{
 .clock{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
    
 }
@@ -70,7 +71,7 @@ header{
 }
 
 .time_header{
-    margin-top: 10px;
+    margin-top: 5px;
     display: flex;
     justify-content: space-between;
 }
@@ -90,11 +91,11 @@ header{
 
 .card span{
     color: var(--black);
-    font-size: 72px;
+    font-size: 54px;
 }
 
 .clock .title{
-    font-size: 36px;
+    font-size: 30px;
     color: var(--purple);
     font-weight: 600;
     
@@ -108,6 +109,7 @@ header{
 
 footer{
      margin-top: auto;
+     z-index: -1;
 }
 
 footer > img{
@@ -132,7 +134,7 @@ footer > img{
 .modal{
     background-color: white;
     width: 40%;
-    height: 40%;
+    height: 45%;
     margin: 20vh auto;
     position: relative;
     border-radius: 10px;
@@ -177,6 +179,27 @@ fom{
     border: none;
     color: #FFF;
     font-size: 1rem;
+    margin-bottom: 10px;
+ }
+
+
+ .form_actions{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+ }
+ .btn_cancelar{
+    background: var(--danger);
+    border: none;
+    color: #FFF;
+    font-size: 1rem;
+    min-width: 100%;
+    border-radius: 4px;
+    padding: 8px;
+    text-align: center;
+    
+    
  }
 
  
@@ -204,6 +227,10 @@ input[type="email"]:focus{
     right: 8px;
     top: 8px;
     padding: 5px;
+    cursor: pointer;
+}
+
+.modal .btn_cancelar:hover{
     cursor: pointer;
 }
 
@@ -243,6 +270,13 @@ input[type="email"]:focus{
     .modal-content img{
         visibility: hidden;
     }
+
+    .modal{
+        background-color: white;
+        width: 90%;
+        height: 50%;
+        
+    }
 }
 
 
@@ -261,9 +295,15 @@ input[type="email"]:focus{
         margin-bottom: 100px;
     }
 
+    .modal{
+        min-width: 60%;
+    }
+
     .modal-content{
         flex-direction: column;
     }
+
+    
 
     .modal-content img{
         visibility: hidden;
